--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="form-input-hotel">
         <div class="form">
           <div class="input">
-            <input type="text" name="location" id="input-location" placeholder="Enter Name Hotel..." autocomplete="off">
+            <input type="text" name="location" id="input-location" placeholder="Enter Name Hotel..." autocomplete="off" data-id="">
             <div class="input-box">
               <h4 class="title">Điểm đến phổ biến</h4>
               <div class="place">
