--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="nav-header">
       <ul class="nav-center">
-        <li class="nav-link"><a href="#">Hotel</a></li>
+        <li class="nav-link"><a href="./src/hotel.html">Hotel</a></li>
         <li class="nav-link"><a href="#">Air Ticket</a></li>
         <li class="nav-link"><a href="#">Special Offers</a></li>
         <li class="nav-link"><a href="#">Travel Guide</a></li>
