--- a/src/hotel.html
+++ b/src/hotel.html
@@ -234,8 +234,8 @@
         <button>Services <i class="fas fa-caret-down"></i></button>
         <div class="sorting-popup">
           <ul>
-            <li>Least</li>
-            <li>Most</li>
+            <li class="least-service">Least</li>
+            <li class="most-service">Most</li>
           </ul>
         </div>
       </div>
@@ -243,8 +243,8 @@
         <button>Rank Stars <i class="fas fa-caret-down"></i></button>
         <div class="sorting-popup">
           <ul>
-            <li>Rank [1..5]</li>
-            <li>Rank [5..1]</li>
+            <li class="one-to-five">Rank [1..5]</li>
+            <li class="five-to-one">Rank [5..1]</li>
           </ul>
         </div>
       </div>
@@ -252,8 +252,8 @@
         <button>Price <i class="fas fa-caret-down"></i></button>
         <div class="sorting-popup">
           <ul>
-            <li>Increase</li>
-            <li>Decrease</li>
+            <li class="increase">Increase</li>
+            <li class="decrease">Decrease</li>
           </ul>
         </div>
       </div>
