--- a/src/hotel.html
+++ b/src/hotel.html
@@ -114,7 +114,7 @@
       <div class="filter-box">
         <div class="display-number-of-hotel">
           <div class="number-of-hotel">
-            There are <span class="bold">10 hotels</span>
+            There are <span class="bold"><span class="total-hotels">10</span> hotels</span>
           </div>
           <button class="clear-all-filter">Clear All Filter</button>
         </div>
