--- a/src/hotel.html
+++ b/src/hotel.html
@@ -18,7 +18,7 @@
 
   <header>
     <div class="logo-header">
-      <img src="../images/logo-mytour.png" alt="myTour">
+      <img src="../images/logo-mytour.png" alt="myTour" class="logo-home">
     </div>
     <div class="nav-header">
       <ul class="nav-center">
