--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./css/styles.css">
   <script src="./src/main.js" type="module" defer></script>
+  <script src="./src/js/intermediateFile.js" type="module" defer></script>
   <script src="https://kit.fontawesome.com/776bbe23d6.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +51,16 @@
         <span class="icon-container"><i class="far fa-bell"></i><span class="subtitle-icon">1</span></span>
       </div>
       <div class="user-icon">
-        <button class="user-manage-btn"><i class="far fa-user"></i><i class="fas fa-chevron-down"></i></button>
+        <button class="user-manage-btn"><i class="far fa-user"></i><i class="fas fa-user"></i><i class="fas fa-chevron-down"></i></button>
+        <div class="user-manage-box">
+          <div class="manage-header"><i class="fas fa-user-tie"></i>
+            <span class="user-name">Giang</span>
+          </div>
+            <ul class="drop-down">
+              <li><button class="manage-user-btn">Cart <i class="fas fa-cart-arrow-down"></i> </button></li>
+              <li><button class="manage-user-btn logout-btn">Logout <i class="fas fa-sign-out-alt"></i></button></li>
+            </ul>
+        </div>
       </div>
     </div>
 
@@ -260,10 +270,10 @@
               <button class="link-google"><i class="fab fa-google-plus"></i>Continue with Google</button>
             </div>
             <div class="login-form ">
-              <form action="">
+              <form>
                 <div class="title-login">Login with Email</div>
-                <label class="user-name-login-box" >
-                  <input type="email" name="user-name" class="user-name-login" required autocomplete="off">
+                <label class="user-name-login-box">
+                  <input type="text" name="user-name" class="user-name-login" required autocomplete="off">
                 </label>
                 <label class="password-login-box" >
                   <input type="password" name="password" class="password-login" required>
@@ -286,16 +296,27 @@
               <button class="link-google"><i class="fab fa-google-plus"></i>Continue with Google</button>
             </div>
             <div class="register-form">
-              <form action="">
+              <form >
                 <div class="title-register">Register with Email</div>
                 <label class="user-name-register-box" >
-                  <input type="email" name="user-name" class="user-name-register" required autocomplete="off">
+                  <input type="email" name="user-name" class="user-name-register" required autocomplete="off" title="Ex: username@gmail.com">
+                  <span class="alert-register">Contains least 1 '@',1 '.' and length from 9 to 30 -Ex: username@gmail.com</span>
+                  <span class="icon-validate-user"><span class="slide-icon-validate ">
+                    <i class="fas fa-check"></i><i class="fas fa-times"></i>
+                  </span></span>
                 </label>
                 <label class="password-register-box" >
-                  <input type="password" name="password" class="password-register" required>
+                  <input type="password" name="password" class="password-register" required title="Ex: a123456">
+                  <span class="alert-register">Begin must letter and length from 7 to 15 -Ex: a123456</span>
+                  <span class="icon-validate-user"><span class="slide-icon-validate">
+                    <i class="fas fa-check"></i><i class="fas fa-times"></i>
+                  </span></span>
                 </label>
                 <label class="password-register-box-confirm" >
-                  <input type="password" name="password" class="password-register-confirm" required>
+                  <input type="password" name="password" class="password-register-confirm" required title="Ex: a123456">
+                  <span class="icon-validate-user"><span class="slide-icon-validate">
+                    <i class="fas fa-check"></i><i class="fas fa-times"></i>
+                  </span></span>
                 </label>
           
                 <div class="register-footer">
