--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span class="user-name">Giang</span>
           </div>
           <ul class="drop-down">
-            <li><button class="manage-user-btn">Cart <i class="fas fa-cart-arrow-down"></i> </button></li>
+            <li><button class="manage-user-btn cart-btn">Cart <i class="fas fa-cart-arrow-down"></i> </button></li>
             <li><button class="manage-user-btn logout-btn">Logout <i class="fas fa-sign-out-alt"></i></button></li>
           </ul>
         </div>
@@ -80,7 +80,7 @@
         <div class="form">
           <div class="input">
             <input type="text" name="location" id="input-location" placeholder="Enter Name Hotel..." autocomplete="off"
-              data-id="">
+              data-id="" >
             <div class="input-box">
               <h4 class="title">Điểm đến phổ biến</h4>
               <div class="place">
@@ -341,6 +341,26 @@
         </div>
       </div>
 
+    </div>
+  </section>
+
+  <section class="shopping-cart-overlay ">
+    <div class="cart-side-bar ">
+      <button class="hide-side-bar"><i class="fas fa-arrow-right"></i></button>
+      <div class="cart-header">
+        Tours Booked
+      </div>
+      <div class="tours-container">
+        
+      </div>
+      <div class="cart-footer">
+        <div class="total-price">
+          <span class="title-total">total: </span><span class="digit">$<span class="price-total">33</span></span>
+        </div>
+        <div class="checkout">
+          <button>Checkout</button>
+        </div>
+      </div>
     </div>
   </section>
 
