--- a/src/hotel.html
+++ b/src/hotel.html
@@ -63,7 +63,7 @@
             <span class="user-name">Giang</span>
           </div>
           <ul class="drop-down">
-            <li><button class="manage-user-btn">Cart <i class="fas fa-cart-arrow-down"></i> </button></li>
+            <li><button class="manage-user-btn cart-btn">Cart <i class="fas fa-cart-arrow-down"></i> </button></li>
             <li><button class="manage-user-btn logout-btn">Logout <i class="fas fa-sign-out-alt"></i></button></li>
           </ul>
         </div>
@@ -366,6 +366,25 @@
         </div>
       </div>
 
+    </div>
+  </section>
+  <section class="shopping-cart-overlay ">
+    <div class="cart-side-bar ">
+      <button class="hide-side-bar"><i class="fas fa-arrow-right"></i></button>
+      <div class="cart-header">
+        Tours Booked
+      </div>
+      <div class="tours-container">
+        
+      </div>
+      <div class="cart-footer">
+        <div class="total-price">
+          <span class="title-total">total: </span><span class="digit">$<span class="price-total">33</span></span>
+        </div>
+        <div class="checkout">
+          <button class="checkout-btn">Checkout</button>
+        </div>
+      </div>
     </div>
   </section>
 
