--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <span class="title-total">total: </span><span class="digit">$<span class="price-total">33</span></span>
         </div>
         <div class="checkout">
-          <button>Checkout</button>
+          <button class="checkout-btn">Checkout</button>
         </div>
       </div>
     </div>
