--- a/src/hotel.html
+++ b/src/hotel.html
@@ -20,7 +20,8 @@
   </div>
   <div class="alert-box">
     <div class="icon-alert ">
-      <span class="success-icon"><i class="far fa-check-circle"></i></span> <span class="error-icon"><i class="far fa-times-circle"></i></span>
+      <span class="success-icon"><i class="far fa-check-circle"></i></span> <span class="error-icon"><i
+          class="far fa-times-circle"></i></span>
       <span class="warning-icon"><i class="fas fa-exclamation-circle"></i></span>
     </div>
     <h3 class="type-alert">Successful</h3>
@@ -62,15 +63,17 @@
     </div>
     <div class="user-header">
       <div class="messenger-icon">
-        <span class="icon-container messenger-btn"><i class="far fa-comments"></i></i><span class="subtitle-icon">0</span></span>
+        <span class="icon-container messenger-btn"><i class="far fa-comments"></i></i><span
+            class="subtitle-icon">0</span></span>
         <div class="messenger-box">
 
         </div>
       </div>
       <div class="notification-icon">
-        <span class="icon-container notification-btn"><i class="far fa-bell"></i><span class="subtitle-icon subtitle-icon-noti">1</span></span>
+        <span class="icon-container notification-btn"><i class="far fa-bell"></i><span
+            class="subtitle-icon subtitle-icon-noti">1</span></span>
         <div class="notification-box">
-          
+
         </div>
       </div>
       <div class="user-icon">
@@ -90,7 +93,7 @@
 
   </header>
 
-<button class="open-booking"><i class="fas fa-bars"></i></button>
+  <button class="open-booking"><i class="fas fa-bars"></i></button>
   <div class="booking">
     <div class="form-input-hotel">
       <div class="form">
@@ -393,7 +396,7 @@
         Tours Booked
       </div>
       <div class="tours-container">
-        
+
       </div>
       <div class="cart-footer">
         <div class="total-price">
@@ -402,6 +405,31 @@
         <div class="checkout">
           <button class="checkout-btn">Checkout</button>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="profile-overlay">
+    <div class="profile-wrapper">
+      <div class="header-profile">
+        My Profile
+      </div>
+      <div class="profile-content">
+        <div class="profile-content-left">
+          <h5 class="name">Full Name : </h5>
+          <h5 class="email">Email : </h5>
+          <h5 class="email">Phone Number : </h5>
+          <h5 class="email">Address : </h5>
+        </div>
+        <div class="profile-content-right">
+          <p class="name-text">Giang truong nguyen</p>
+          <p class="email-text">nhockrong98@gmail.com</p>
+          <p class="phone-text">023262*****</p>
+          <p class="address-text">Thu Duc district,Ho Chi Minh city</p>
+        </div>
+      </div>
+      <div class="profile-footer">
+        <button class="change-password">Change Password</button>
+        <button class="confirm-profile">Confirm</button>
       </div>
     </div>
   </section>
