--- a/src/hotel.html
+++ b/src/hotel.html
@@ -84,6 +84,8 @@
             <span class="user-name">Giang</span>
           </div>
           <ul class="drop-down">
+            <li><button class="manage-user-btn profile-btn">Profile <i class="fas fa-user"></i> </button>
+            </li>
             <li><button class="manage-user-btn cart-btn">Cart <i class="fas fa-cart-arrow-down"></i> </button></li>
             <li><button class="manage-user-btn logout-btn">Logout <i class="fas fa-sign-out-alt"></i></button></li>
           </ul>
