--- a/index.html
+++ b/index.html
@@ -207,15 +207,17 @@
         <img src="./images/logo-why-mytour.png" alt="logo why tour">
       </div>
       <ul class="list-service">
-        <li><i class="fas fa-check-circle"></i> <span class="bold"> Giá tốt hơn</span>so với đặt phòng trực tiếp tại
-          khách sạn</li>
-        <li><i class="fas fa-check-circle"></i> Đảm bảo <span class="bold"> giá tốt nhất</span></li>
-        <li><i class="fas fa-check-circle"></i> Đảm bảo <span class="bold">hoàn tiền </span></li>
-        <li><i class="fas fa-check-circle"></i> Nhân viên chăm sóc, tư vấn nhiều kinh nghiệm</li>
-        <li><i class="fas fa-check-circle"></i> Hơn <span class="bold">5000 </span>khách sạn tại Việt Nam với đánh giá
-          thực</li>
-        <li><i class="fas fa-check-circle"></i>Nhiều chương trình khuyến mãi và tích lũy điểm</li>
-        <li><i class="fas fa-check-circle"></i> Thanh toán <span class="bold">dễ dàng, đa dạng</span></li>
+        <li><i class="fas fa-check-circle"></i> <span class="bold"> Better offer than</span>direct booking at the hotel.
+        </li>
+        <li><i class="fas fa-check-circle"></i> <span class="bold"> Best price</span> guaranteed.</li>
+        <li><i class="fas fa-check-circle"></i> <span class="bold">Money is refunded</span> if the booking is cancelled.
+        </li>
+        <li><i class="fas fa-check-circle"></i> Customer services and supports with years of experience.</li>
+        <li><i class="fas fa-check-circle"></i> Over <span class="bold">5,000 </span> hotels in Vietnam with honest
+          reviews.</li>
+        <li><i class="fas fa-check-circle"></i>Thousands of promotions and point rewards.</li>
+        <li><i class="fas fa-check-circle"></i> Various payment methods that are <span class="bold">quick and
+            easy.</span></li>
       </ul>
     </div>
   </div>
@@ -225,54 +227,55 @@
 
       <img class="logo-footer" src="./images/logo-mytour.png" alt="logo">
 
-      <div class="paragraph bold">Công ty TNHH Mytour Việt Nam</div>
-      <p>Hà Nội: 024 7109 9999</p>
-      <p>Hồ Chí Minh: 028 7109 9998</p>
+      <div class="paragraph bold">Mytour Vietnam Ltd.</div>
+      <p>Hanoi: (+84) 024 7109 9999</p>
+      <p>Ho Chi Minh: (+84) 028 7109 9998</p>
       <p>Email: admin@mytour.vn</p>
-      <p>Văn phòng Hà Nội: Tầng 11, Tòa Peakview, 36 Hoàng Cầu, Đống Đa</p>
-      <p>Văn phòng HCM: Tầng 6, Tòa Nhà Central Park, 117 Nguyễn Du, Q.1</p>
+      <p>Hanoi Office: Floor 11, Peakview, 36 Hoang Cau st., Dong Da dist.</p>
+      <p>Ho Chi Minh Office: Floor 6, Central Park, 117 Nguyen Du st. District 1</p>
       <div class="paragraph">
         <p>Số ĐKKD: 0105983269 cấp ngày 30/08/2012</p>
-        <p>Nơi cấp: Sở kế hoạch và đầu tư thành phố Hà Nội</p>
-        <p>Lĩnh vực kinh doanh: Đại lý du lịch</p>
-        <p>Địa chỉ tên miền: Mytour.vn</p>
+        <p>Place of issue: Department of Planning and Investment of Hanoi City</p>
+        <p>Scope of business: Travel agency</p>
+        <p>Website's domain: mytour.vn</p>
       </div>
       <div class="paragraph">
-        <p>Tài khoản ngân hàng số: 19027493250015</p>
+        <p>Bank Account Number: 19027493250015</p>
         <p>Techcombank Chi nhánh Hội Sở</p>
-        <p>Chủ tài khoản: Công ty TNHH Mytour Việt Nam</p>
+        <p>Account's Owner: Mytour Vietnam Ltd.</p>
       </div>
     </div>
     <div class="center-col">
-      <div class="paragraph bold">QUY ĐỊNH DÀNH CHO WEBSITE TMĐT BÁN HÀNG –
-        DỊCH VỤ ĐẶT PHÒNG</div>
-      <p>Chính sách và quy định chung</p>
-      <p>Quy định về thanh toán</p>
-      <p>Quy định về xác nhận thông tin đặt phòng</p>
-      <p>Chính sách về hủy đặt phòng và hoàn trả tiền</p>
-      <p>Chính sách bảo mật thông tin</p>
+      <div class="paragraph bold">POLICIES AND REGULATIONS FOR ECOMMERCE WEBSITES - BOOKING SERVICES</div>
+      <p>General policies and regulations</p>
+      <p>Payment regulations</p>
+      <p>Booking confirmation regulations</p>
+      <p>Booking cancellation and refund policies</p>
+      <p>Information security policies</p>
       <img src="./images/logo-dathongbao-bocongthuong-w165.png" alt="bo cong thuong">
-      <div class="paragraph bold">QUY ĐỊNH CHO SÀN GDTMĐT - DỊCH VỤ ĐẶT PHÒNG VÀ DỊCH VỤ ĐẶT TOUR DU LỊCH</div>
-      <p>Quy chế hoạt động</p>
-      <p>Chính sách bảo mật</p>
-      <p>Quy trình giải quyết tranh chấp, khiếu nại</p>
+      <div class="paragraph bold">REGULATIONS FOR ECOMMERCE FLOOR - HOTEL AND TOUR BOOKING SERVICES</div>
+      <p>Operating regulation</p>
+      <p>Privacy Policyt</p>
+      <p>Disputes and complaints resolving process</p>
       <img src="./images/logo-congthuong-w165.png" alt="bo cong thuong">
 
     </div>
     <div class="right-col">
-      <div class="paragraph bold">KHÁCH SẠN TẠI VIỆT NAM</div>
+      <div class="paragraph bold">HOTEL IN VIETNAM</div>
       <p>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z Khách sạn theo khu vực</p>
-      <p class="paragraph bold">Khách hàng và đối tác</p>
-      <p>Tích lũy Vpoint</p>
-      <p>Đăng nhập HMS</p>
-      <p>Tuyển dụng</p>
-      <p>Liên hệ</p>
-      <div class="paragrap bold">TẢI MOBILE APP: MYTOUR.VN</div>
+      <p class="paragraph bold">Customers and partners</p>
+      <p>Cumulative Vpoint</p>
+      <p>Sign in to HMS</p>
+      <p>Recruitment
+      </p>
+      <p>Contact
+      </p>
+      <div class="paragrap bold">DOWNLOAD MOBILE APP: MYTOUR.VN</div>
       <div class="paragrap logo-container">
         <img src="./images/btn-app-apple.png" alt="apple">
         <img src="./images/btn-app-android.png" alt="android">
       </div>
-      <div class="paragraph bold">KẾT NỐI VỚI MYTOUR.VN</div>
+      <div class="paragraph bold">CONNECT WITH MYTOUR.VN</div>
       <div class="icon-container"><span><i class="fab fa-facebook-square"></i></span><span><i
             class="fab fa-google-plus-square"></i></span><span><i class="fab fa-instagram-square"></i></span></div>
     </div>
