--- a/src/hotel.html
+++ b/src/hotel.html
@@ -276,7 +276,7 @@
         </div>
       </div>
       <div class="rank-stars">
-        <button>Rank Stars <i class="fas fa-caret-down"></i></button>
+        <button>Ranking <i class="fas fa-caret-down"></i></button>
         <div class="sorting-popup">
           <ul>
             <li class="one-to-five">Rank [1..5]</li>
@@ -288,8 +288,8 @@
         <button>Price <i class="fas fa-caret-down"></i></button>
         <div class="sorting-popup">
           <ul>
-            <li class="increase">Increase</li>
-            <li class="decrease">Decrease</li>
+            <li class="increase">Ascending</li>
+            <li class="decrease">Descending</li>
           </ul>
         </div>
       </div>
