--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     <div class="cart-side-bar ">
       <button class="hide-side-bar"><i class="fas fa-arrow-right"></i></button>
       <div class="cart-header">
-        Tours Booked
+        Booking Details
       </div>
       <div class="tours-container">
 
